...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- custom searchbar for repository list by username-->
        <com.example.hcahealthcaretask.view.customviews.CustomSearchBar
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

...
            android:entries="@array/programming_languages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchBar" />

        <!--recyclerview to show list of repository-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/repositoriesRecyclerView"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/zero_dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
