<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/github_nav_graph">


    <fragment
        android:id="@+id/repoListFragment"
        android:name="com.example.hcahealthcaretask.view.fragments.GitHubRepositoriesFragment"
        tools:layout="@layout/fragment_repositories">
        <action
            android:id="@+id/action_repoListFragment_to_repoDetailFragment"
            app:destination="@id/repoDetailFragment">
        </action>
    </fragment>

    <fragment
        android:id="@+id/repoDetailFragment"
        android:name="com.example.hcahealthcaretask.view.fragments.GitHubRepositoryDetailFragment"
        tools:layout="@layout/fragment_repository_detail" />
</navigation>

<!--<argument-->
<!--android:name="repo"-->
<!--app:argType="com.example.githubapp.data.Repository" />-->